# MagicDuckLandReborn

./: ByteStream.h  CMakeLists.txt  ChecksumEncoder.h  Connection.h  LogicClientAvatar.h  LogicClientHome.h  LogicMagicMessageFactory.h  LoginMessage.h  MessageManager.h  Messaging.h  OwnHomeDataMessage.h  PiranhaMessage.cpp  PiranhaMessage.h  README.md  Rc4.h  main.cpp
Logic/: LogicBase.h  LogicMagicMessageFactory.h
Logic/Commands/: EndClientTurnMessage.h  LogicBuyBuildingCommand.h  LogicCommand.h  LogicCommandManager.h
Logic/Home/: LogicClientAvatar.h  LogicClientHome.h
Logic/Login/: LoginOkMessage.h
Logic/Name/: ChangeAvatarNameMessage.h
Server/: Connection.h  Header.h  MessageManager.h
Titan/: ByteStream.h  LogicLong.cpp  LogicLong.h
